<resources>
    <string name="app_name">Agri ProVision Elite</string>
    <string name="title_activity_user_register">UserRegister</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="user_name">Your Name</string>

    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="form_username"> Name</string>
    <string name="form_email">Email ID</string>
    <string name="form_phone">Phone No</string>
    <string name="form_password">Password</string>
    <string name="already_member">I am already a member.</string>
    <string name="new_member">New Here ? Sign up instead.</string>
    <string name="nameerror">Enter a valid name</string>
    <string name="emailerror">Enter a valid email</string>
    <string name="add_blog">Add Blog </string>

    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="mobileerror">Enter a valid mobile</string>
    <string name="passworderror">The password must contain at least 8 character containing, at least one letter and one number</string>
    <string-array name="state_array">
        <item>Maharashtra</item>
        <item>Madhya pradesh</item>
        <item>Maharashtra</item>
        <item>punjab</item>
        <item>tamil nadu</item>

    </string-array>
    <string name="select_state">Select state</string>


    <string-array name="dist_array">
        <item>dhule</item>
        <item>jalgoan</item>
        <item>pune</item>
        <item>satara</item>
        <item>kolhapur</item>

    </string-array>
    <string name="select_district">Select district</string>


    <string-array name="taluka_array">
        <item>shirpur</item>
        <item>sakri</item>
        <item>Sindkhede</item>
        <item>dhule</item>


    </string-array>
    <string name="select_taluka">Select taluka</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_admin_drawer">adminDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="open">opening\n</string>
    <string name="close">closing</string>

    <!-- TODO: Remove or change this placeholder text -->


</resources>