<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Krishi_Officer.K_Register"
    android:orientation="vertical">





    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical"
            android:background="@color/green">

            <ImageView
                android:layout_width="272dp"
                android:layout_height="108dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:src="@drawable/g1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="25sp"
                android:textAlignment="center"
                android:text="Agri ProVision Elite"
                android:shadowColor="@color/black"
                android:textColorHighlight="@color/black"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/form_username">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/kname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:layout_margin="10dp"
                    android:ems="10" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/form_email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/kEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:layout_margin="10dp"
                    android:ems="10" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/form_phone">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/kmobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:layout_margin="10dp"
                    android:ems="10" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:endIconMode="password_toggle"
                android:hint="@string/form_password">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/kPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:layout_margin="10dp"
                    android:ems="10" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:endIconMode="password_toggle"
                android:hint="confirm Password">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/kRepassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:layout_margin="10dp"
                    android:ems="10" />



            </com.google.android.material.textfield.TextInputLayout>


            <!--            <com.google.android.material.textfield.TextInputLayout-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:hint="adress">-->

            <!--                <com.google.android.material.textfield.TextInputEditText-->
            <!--                    android:id="@+id/shopname3"-->
            <!--                    android:layout_width="match_parent"-->
            <!--                    android:layout_height="wrap_content"-->
            <!--                    android:layout_margin="10dp"-->
            <!--                    android:ems="10" />-->

            <!--            </com.google.android.material.textfield.TextInputLayout>-->

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="SpecialCode">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/SpecialCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:ems="10" />

            </com.google.android.material.textfield.TextInputLayout>


            <!--            <com.google.android.material.textfield.TextInputLayout-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:hint="shop Adress">-->

            <!--                <com.google.android.material.textfield.TextInputEditText-->
            <!--                    android:id="@+id/shopAdd3"-->
            <!--                    android:layout_width="match_parent"-->
            <!--                    android:layout_height="wrap_content"-->
            <!--                    android:layout_margin="10dp"-->
            <!--                    android:ems="10" />-->

            <!--            </com.google.android.material.textfield.TextInputLayout>-->



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginTop="20dp"
                android:text="select state"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/K_state"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:prompt="@string/select_state" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginTop="20dp"
                android:text="select district"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/K_dist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:prompt="@string/select_district" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginTop="20dp"
                android:text="select taluka"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/K_tal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:prompt="@string/select_taluka" />


            <Button
                android:id="@+id/K_registerBtn"
                android:layout_margin="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#F1F4F1"
                android:background="@drawable/btn_round"
                android:text="Sign Up"
                android:backgroundTintMode="multiply"/>

            <TextView
                android:id="@+id/k_alredy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:text="@string/already_member"/>

        </LinearLayout>
    </ScrollView>

<!--    <LinearLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="100dp"-->
<!--        android:orientation="horizontal"-->
<!--        android:background="@drawable/top_gradient"/>-->















</LinearLayout>