<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".Farmer.LoginActivity"
    android:id="@+id/loginn">




    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical">


            <ImageView
                android:layout_width="201dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:src="@drawable/bbbb" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textAlignment="center"
                android:text="WELCOME BACK \n Farmer "/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:text="Agri ProVision Elite "
                android:paddingBottom="10dp"
                android:layout_marginBottom="20dp"
                android:textStyle="bold"

                />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/form_email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:layout_margin="10dp"
                    android:ems="10" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:endIconMode="password_toggle"
                android:hint="@string/form_password">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:layout_margin="10dp"
                    android:ems="10" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/loginbtn"
                android:layout_margin="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhite"
                android:background="@drawable/btn_round"
                android:text="Login" />

            <TextView
                android:id="@+id/already_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:text="@string/new_member"/>


            <!--            <TextView-->
            <!--                android:id="@+id/abc"-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:layout_marginTop="40dp"-->
            <!--                android:textColor="@color/colorWhite"-->
            <!--                android:textAlignment="center"-->
            <!--                android:text="hii"/>-->
            <!--            <Button-->
            <!--                android:id="@+id/testing"-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:layout_marginTop="40dp"-->
            <!--                android:textColor="@color/colorWhite"-->
            <!--                android:textAlignment="center"-->
            <!--                android:text="feedback "/>-->

        </LinearLayout>
    </ScrollView>

<!--    <LinearLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="100dp"-->
<!--        android:orientation="horizontal"-->
<!--        android:background="@drawable/top_gradient"/>-->




</LinearLayout>